--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
                 <div class="text-wraper">
                     <div class="intro-heading">Eric Wang<p style="font-size:0.5em;">(Cheng-Yao Wang)</p></div>
                     <div class="intro-lead-in">
-                        <p>I’m a Ph.D. candidate in Information Science at Cornell University interested in <span class="about-focus">Human-Computer Interaction</span>, <span class="about-focus">Computer-Supported Cooperative Work</span> and <span class="about-focus">Virtual/Mixed Reality.</span></p>
+                        <p>I am an AR/VR Research Scientist in the Global Technology Applied Research team at JPMorgan Chase interested in <span class="about-focus">Human-Computer Interaction</span>, <span class="about-focus">Computer-Supported Cooperative Work</span> and <span class="about-focus">Virtual/Mixed Reality.</span></p>
                     </div>
                     <ul class="icon-list">
                         <li><a href="mailto:ericwang0701@gmail.com"><i class="fa fa-envelope-square fa-3x"></i></a></li>
                         <li><a href="https://scholar.google.com/citations?user=_GuY94gAAAAJ&hl=en" target="_blank"><i class="fa fa-graduation-cap fa-3x" aria-hidden="true"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/ericwanghci" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a></li>
-                        <li><a href="https://drive.google.com/file/d/16_P2b1KiagcJE_PY7w8yn1sP6s_vIKn5/view?usp=sharing" class="link" target="_blank"><i class="fa-solid fa-file fa-3x"></i></a></li>                    
+                        <li><a href=https://drive.google.com/file/d/1ubsItmfJFriy_-7Zh2Dt9SOnTAUaxAxk/view" class="link" target="_blank"><i class="fa-solid fa-file fa-3x"></i></a></li>                    
                     </ul>
                 </div>
             </div>
@@ -108,11 +108,11 @@
                     <div id="profile-wraper"></div>
                 </div>
                 <div class="col-md-9 about-content">
-                    <h3>I’m Eric Wang, a Ph.D. candidate in Information Science at Cornell University advised by <a href="https://communication.cals.cornell.edu/people/andrea-won" target="_blank">Prof. Andrea Stevenson Won</a>. Previously, I was a research intern at <span class="bold">Autodesk</span>, <span class="bold">Microsoft Research</span>, and <span class="bold">Facebook Reality Lab</span>. I have B.S and M.S. in Computer Science from National Taiwan University advised by <a href="http://mikechen.com/" target="_blank">Prof. Mike Y. Chen</a> and <a href="http://graphics.im.ntu.edu.tw/~robin/" target="_blank">Prof. Bing-Yu Chen</a>.</h3>
+                    <h3>I’m Eric Wang, an AR/VR Research Scientist in the Global Technology Applied Research team at JPMorgan Chase. I have B.S and M.S. in Computer Science and I earn my PhD in Information Science from Cornell University. </h3>
+                        
+                    <h3>My research interests lie at the intersection of <span class="span-focus">Human-Computer Interaction (HCI)</span>, <span class="span-focus">Computer-Supported Cooperative Work (CSCW)</span>, and <span class="span-focus">Virtual/Mixed Reality (VR/MR)</span>. My current work centers on XR collaboration, where I develop novel XR systems and interactions to address the challenges of cross-reality and hybrid workspaces.</h3>
 
-                    <h3>My research interests lie at the intersection of <span class="span-focus">Human-Computer Interaction (HCI)</span>, <span class="span-focus">Computer-Supported Cooperative Work (CSCW)</span>, and <span class="span-focus">Virtual/Mixed Reality (VR/MR)</span> In my Ph.D. research, I implemented and utilized<span class="bold"> computer vision </span>and <span class="bold">machine learning</span> techniques  to reconstruct our experiences and enable novel VR/MR experiences including <span class="bold">reliving experiences in VR socially</span>, <span class="bold">animating avatars in VR with online videos</span>, and <span class="bold"> personalizable AR/MR user interface</span>, as well as identifying their <span class="bold">privacy concerns</span> and challenges.</h3>
-
-                    <h3>More specifically, my PhD research focuses on (1) designing ReliveReality, a new experience-sharing method that allows people to reconstruct their experiences in 3D and share them with others in social virtual environments. (2) leveraging the ReliveReality prototype to conduct studies to understand people’s sharing preferences and privacy concerns for sharing reconstructed experiences. (3) implementing VideoPoseVR, a system that allows users to create animated characters in VR using 3D human motions that are extracted directly from online videos. (4) designing social-aware AR/MR interfaces through reconstructing social context cues and transforming avatar movements.</h3>
+                    <h3>In my Ph.D. research, I implemented and utilized<span class="bold"> computer vision </span>and <span class="bold">machine learning</span> techniques  to reconstruct our experiences and enable novel VR/MR experiences including <span class="bold">reliving experiences in VR socially</span>, <span class="bold">animating avatars in VR with online videos</span>, and <span class="bold"> personalizable AR/MR user interface</span>, as well as identifying their <span class="bold">privacy concerns</span> and challenges.</h3>
     
                 </div>                
             </div>
@@ -123,7 +123,7 @@
                 <div class="col-md-9 about-list">
                     <ul>
                         <li class="list-left"><h3><span class="bold">Ph.D.</span> in Information Science, Cornell University</h3></li>
-                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Sep '16 – Current</h5></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Sep '16 – Aug'23</h5></li>
                     </ul>
                     <ul>
                         <li class="list-left"><h3><span class="bold">M.S.</span> in Computer Science, National Taiwan University</h3></li>
@@ -140,6 +140,10 @@
                     <h2>Work Experience</h2>
                 </div>
                 <div class="col-md-9 about-list">
+                    <ul>
+                        <li class="list-left"><h3><span class="bold">Research Scientist,</span>AR/VR research, <span class="span-color">Global Technology Applied Research at JPMC</span></h3></li>
+                        <li class="list-right"><h5><i class="fa fa-calendar"></i>Spring 2023 - current</h5></li>
+                    </ul>
                     <ul>
                         <li class="list-left"><h3><span class="bold">Research Internship,</span>work with Dr. Mar Gonzalez Franco and Dr. Andy Wilson, <span class="span-color">Microsoft Research</span></h3></li>
                         <li class="list-right"><h5><i class="fa fa-calendar"></i>Summer 2022</h5></li>
